# software_design_labs

./: .gitignore
include/figures/: point.hpp  shape.hpp  sinwave.hpp  text.hpp
lab_1/: CMakeLists.txt  run.sh
lab_1/include/container/: list.hpp  listset.hpp  listset_1.hpp
lab_1/include/exception/: exceptions.hpp
lab_1/include/figures/: color.hpp  point.hpp  shape.hpp  sinsquare.hpp  sinsquaretext.hpp  sinwave.hpp  text.hpp
lab_1/src/: containers_example.cpp  main.cpp
lab_1/src/figures/: color.cpp  point.cpp  shape.cpp  sinsquare.cpp  sinsquaretext.cpp  sinwave.cpp  text.cpp
lab_1/src/tests/: test_figures.cpp
lab_2/: Lab2.pro  exceptions.hpp  hashset.h  hashsetexception.h  list.hpp  listset.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  shape.cpp  shape.h  shapescene.cpp  shapescene.h  shapescenemdiwindow.cpp  shapescenemdiwindow.h  shapescenemdiwindow.ui  shapetypes.h  shapeview.cpp  shapeview.h  sinwave.cpp  sinwave.h  square.cpp  square.h  squarewithtext.cpp  squarewithtext.h  text.cpp  text.h
src/: main.cpp
src/figures/: color.cpp  shape.cpp  sinsquare.cpp  sinsquaretext.cpp  sinwave.cpp
